# rust_dev

./: .gitignore  Dockerfile  readme.md
.devcontainer/: devcontainer.json
ary-slice/: Cargo.toml
ary-slice/src/: main.rs
axum-test/: Cargo.toml  readme.md
axum-test/src/: main.rs  test.rs
borrowing-test/: Cargo.toml
borrowing-test/src/: main.rs
box-test/src/: main.rs
caesar-cipher/src/: main.rs
calculator/src/: main.rs
calendar/: Cargo.toml
calendar/src/: main.rs
closure/src/: main.rs
command-line/: Cargo.toml
command-line/src/: main.rs
compare-number/: Cargo.toml
compare-number/src/: main.rs
cumulativesum/: Cargo.toml
cumulativesum/src/: cumulative_sum.rs  lib.rs  main.rs
edge/: Cargo.toml
edge/src/: main.rs
fetchdata/: Cargo.toml
fmap/: Cargo.toml
fold/: Cargo.toml
forecast/: Cargo.toml  readme.md
freqency-analysis/: Cargo.toml
future-test/: Cargo.toml
futures-stream/: Cargo.toml  readme.md
generics-test/: Cargo.toml
hashmap-test/: Cargo.toml
iter-test/: Cargo.toml
janken/: Cargo.toml
lifetime-test/: Cargo.toml
lifetime_elision/: Cargo.toml
lifetime_struct/: Cargo.toml
macro-rules/: Cargo.toml
mkreadme/: Cargo.toml
n255-analysis/: Cargo.toml
n255analysis/: Cargo.toml
option-and-result/: Cargo.toml
prime-factorizaton/: Cargo.toml
reverse-test/: Cargo.toml
samplecli/: Cargo.toml  input.txt
searching/: Cargo.toml
sorting/: Cargo.toml
stock_analysis/: Cargo.toml
thread-test/: Cargo.toml
trait-test/: Cargo.toml
trait_ord/: Cargo.toml
twitter/: Cargo.toml
vec-test/: Cargo.toml
(+123 files in other folders)
