[package]
name = "axum-test"
version = "0.2.1"
edition = "2021"

[dependencies]
axum = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
